# OpenCv-Flam-Project

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/opencvflam/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  processor.cpp  renderer.cpp  renderer.h
app/src/main/java/com/example/opencvflam/: CameraController.kt  GLSurfaceNativeView.kt  MainActivity.kt
app/src/main/res/drawable/: overlay_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opencvflam/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
